--- a/src/app/Features/home/pages/homepage/homepage.component.scss
+++ b/src/app/Features/home/pages/homepage/homepage.component.scss
@@ -24,146 +24,7 @@
 
 /*--------------------------------------------------------------------- skeleton ---------------------------------------------------------------------*/
 
-* {
-     box-sizing: border-box !important;
-}
 
-html {
-     scroll-behavior: smooth;
-}
-
-body {
-     color: #666666;
-     font-size: 14px;
-     font-family: poppins;
-     line-height: 1.80857;
-     font-weight: normal;
-     overflow-x: hidden;
-}
-
-a {
-     color: #1f1f1f;
-     text-decoration: none !important;
-     outline: none !important;
-     -webkit-transition: all .3s ease-in-out;
-     -moz-transition: all .3s ease-in-out;
-     -ms-transition: all .3s ease-in-out;
-     -o-transition: all .3s ease-in-out;
-     transition: all .3s ease-in-out;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-     letter-spacing: 0;
-     font-weight: normal;
-     position: relative;
-     padding: 0 0 10px 0;
-     font-weight: normal;
-     line-height: normal;
-     color: #111111;
-     margin: 0
-}
-
-h1 {
-     font-size: 24px
-}
-
-h2 {
-     font-size: 22px
-}
-
-h3 {
-     font-size: 18px
-}
-
-h4 {
-     font-size: 16px
-}
-
-h5 {
-     font-size: 14px
-}
-
-h6 {
-     font-size: 13px
-}
-
-*,
-*::after,
-*::before {
-     -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-     box-sizing: border-box;
-}
-
-h1 a,
-h2 a,
-h3 a,
-h4 a,
-h5 a,
-h6 a {
-     color: #212121;
-     text-decoration: none !important;
-     opacity: 1
-}
-
-button:focus {
-     outline: none;
-}
-
-ul,
-li,
-ol {
-     margin: 0px;
-     padding: 0px;
-     list-style: none;
-}
-
-p {
-     margin: 0px;
-     font-weight: 300;
-     font-size: 15px;
-     line-height: 24px;
-}
-
-a {
-     color: #222222;
-     text-decoration: none;
-     outline: none !important;
-}
-
-a,
-.btn {
-     text-decoration: none !important;
-     outline: none !important;
-     -webkit-transition: all .3s ease-in-out;
-     -moz-transition: all .3s ease-in-out;
-     -ms-transition: all .3s ease-in-out;
-     -o-transition: all .3s ease-in-out;
-     transition: all .3s ease-in-out;
-}
-
-img.logo {
-  width: 124px;
-    height: auto;
-  padding: 3px 0;
-}
-
-:focus {
-     outline: 0;
-}
-
-.btn-custom {
-     margin-top: 20px;
-     background-color: transparent !important;
-     border: 2px solid #ddd;
-     padding: 12px 40px;
-     font-size: 16px;
-}
 
 .lead {
      font-size: 18px;
@@ -242,6 +103,10 @@ button {
      position: relative;
      margin-bottom: 50px;
 }
+.item{
+  width: 93%;
+  cursor: pointer;
+}
 
 .main_heading h2 {
      padding: 0;
@@ -265,6 +130,52 @@ button {
 
 .white_heading_main h2 {
      color: #fff;
+}
+
+.demos .item{
+  // border: 1px solid lightgray;
+  border-radius: 9px;
+  box-shadow: 0px 0px 16px -8px;
+}
+.demos .item img{
+  border-radius: 7px 7px 0 0;
+  height: 236px;
+}
+.demo-description{
+  height: 141px;
+}
+
+.owl-carousel .owl-item img{
+  height: 238px;
+}
+.traveling-box{
+  position: relative;
+  transition: .4s all ease-in-out;
+  border-radius: 10px;
+}
+.traveling-box:hover{
+  transform: translate(-6px,-6px);
+  box-shadow: 10px 10px 17px -7px;
+}
+.traveling-box img {
+  width: 100%;
+  height: 374px;
+  cursor: pointer;
+  border-radius: 5px;
+  object-fit: cover;
+}
+// .traveling-box img:hover{
+
+
+// }
+.traveling-box p {
+  position: absolute;
+    bottom: 42px;
+    color: white;
+    font-size: 20px;
+    font-weight: 600;
+    text-align: left;
+    padding: 0 48px;
 }
 
 .small_main_heading {
@@ -437,10 +348,10 @@ a.readmore_bt {
 /*--------------------------------------------------------------------- header area ---------------------------------------------------------------------*/
 
 .header {
-  background: #2e4fb1;
+  background: #2b64ab;
   box-shadow: 3px 4px 9px -6px;
     //  background-color: transparent;
-     position: absolute;
+    //  position: fixed;
      z-index: 999;
      width: 100%;
      left: 0;
@@ -450,28 +361,61 @@ a.readmore_bt {
      padding-top: 0px;
      background-size: 100% 100%;
      background-repeat: no-repeat;
+    //  position: absolute;
      /* min-height: 110px; */
      /* padding-top: 50px; */
+}
+// .contact-mail i{
+//   transform: rotateY(180deg);
+// }
+.contact-number i{
+  transform: rotateY(180deg);
+}
+.header-icon{
+  background: #11bfd8;
+  padding: 5px 9px;
+  border-radius: 50%;
+  color: white;
+  margin-top: -3px;
+}
+.contact-number p{
+  font-weight: 600;
+  color: black;
+}
+.contact-number span{
+  // font-weight: 600;
+  color: #999898;
+  font-size: 14px;
+}
+.contact-mail p{
+  font-weight: 600;
+  color: black;
+}
+.contact-mail span{
+  // font-weight: 600;
+  color: #999898;
+  font-size: 14px;
 }
 
 .nav-item a{
   color: rgb(255 255 255 / 90%) !important;
-  font-size: 20px;
-  font-weight: 500;
-
+  font-size: 15px;
+  font-weight: 600;
+  padding: 8px 16px;
   transition: all .2s ease-in-out;
 
 }
 .nav-item a:hover{
-  background: #0000001a;
+  background: rgba(255,255,255,.1);
   border-radius: 6px;
   font-weight: 600;
-  transform: translatey(15%);
+  transform: translatey(7%);
 }
 
 .banner-main img {
      height: 91vh;
-     width: -webkit-fill-available;
+     object-fit: cover;
+     // width: -webkit-fill-available;
 }
 .carousel-control-next-icon{
   display: inline-block;
@@ -496,7 +440,9 @@ a.readmore_bt {
     padding: 2px;
 }
 
-
+.amazing-box p{
+  font-size: 17px;
+}
 .logo {
      /* float: left;
      position: relative;
@@ -862,6 +808,9 @@ ul.top_icon li a {
      background-color: #38c8a8;
      cursor: pointer;
 }
+.nav-container{
+  margin: 0 20%;
+}
 
 .header-search form .search-btn:hover {
      background: #111111;
@@ -947,6 +896,12 @@ ul.top_icon li a {
      position: relative;
      border-radius: 2px;
 }
+// .contact-number p,span{
+//   font-size: 13px ;
+// }
+// .contact-mail p,span{
+//   font-size: 13px ;
+// }
 
 .cart-box a .p-up {
      position: absolute;
@@ -1469,26 +1424,26 @@ ul.top_icon li a {
      height: 100%;
 }
 
-.heroslider .slider-01 {
-     width: 100%;
-     background-image: url(../../../../../assets/images/slider-01.jpg);
-     background-size: cover;
-     background-position: center;
-}
+// .heroslider .slider-01 {
+//      width: 100%;
+//      background-image: url(../../../../../assets/images/slider-01.jpg);
+//      background-size: cover;
+//      background-position: center;
+// }
 
-.heroslider .slider-02 {
-     width: 100%;
-     background-image: url(../../../../../assets/images/slider-02.jpg);
-     background-size: cover;
-     background-position: center;
-}
+// .heroslider .slider-02 {
+//      width: 100%;
+//      background-image: url(../../../../../assets/images/slider-02.jpg);
+//      background-size: cover;
+//      background-position: center;
+// }
 
-.heroslider .slider-03 {
-     width: 100%;
-     background-image: url(../../../../../assets/images/slider-03.jpg);
-     background-size: cover;
-     background-position: center;
-}
+// .heroslider .slider-03 {
+//      width: 100%;
+//      background-image: url(../../../../../assets/images/slider-03.jpg);
+//      background-size: cover;
+//      background-position: center;
+// }
 
 .heroslider .slides li {
      height: 600px;
@@ -1514,7 +1469,7 @@ ul.top_icon li a {
      display: flex;
 }
 .logo-container{
-  margin-left: 57px;
+  margin-left: 3%;
 }
 
 a.slide_banner {
@@ -1786,7 +1741,7 @@ input[type="radio"] .styled:checked+label::after {
   font-weight: bold;
   padding-bottom: 20px;
   padding-top: 25px;
-  margin: 0px 163px;
+  margin: 0% 10%;
   opacity: 1;
 }
 .banner-text h1{
@@ -1891,7 +1846,7 @@ input[type="radio"] .styled:checked+label::after {
 .about {
      /* padding-top: 0px !important; */
      /* padding: 90px 0px; */
-     margin-top: 64px 0;
+     margin: 64px 0;
 }
 
 .aboutheading {
@@ -1920,15 +1875,15 @@ input[type="radio"] .styled:checked+label::after {
      margin-left: 15px;
 }
 
-.titlepage h2::before,
-.titlepage h2::after {
-     content: "";
-     position: absolute;
-     height: 5px;
-     border-top: 1px solid #13aba6;
-     top: 27px;
-     width: 149px;
-}
+// .titlepage h2::before,
+// .titlepage h2::after {
+//      content: "";
+//      position: absolute;
+//      height: 5px;
+//      border-top: 1px solid #13aba6;
+//      top: 27px;
+//      width: 149px;
+// }
 
 .aboutheading span {
      color: #141012;
@@ -1951,8 +1906,8 @@ input[type="radio"] .styled:checked+label::after {
      margin-bottom: 50px;
      display: inline-block;
      padding: 60px 25px;
-     border-left: 15px solid #077f9b;
-     border-right: 15px solid #0c1e43;
+     border-left: 15px solid #4a91e9;
+     border-right: 15px solid #183a64;
      border-radius: 5px;
      -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
@@ -1962,10 +1917,10 @@ input[type="radio"] .styled:checked+label::after {
      -webkit-background-size: 100% 20px;
      -moz-background-size: 100% 20px;
      background-size: 100% 20px;
-     background-image: -webkit-linear-gradient(left, #077f9b 0%, #0c1e43 100%), -webkit-linear-gradient(left, #077f9b 0%, #0c1e43 100%);
-     background-image: -moz-linear-gradient(left, #077f9b 0%, #0c1e43 100%), -moz-linear-gradient(left, #077f9b 0%, #0c1e43, 100%);
-     background-image: -o-linear-gradient(left, #077f9b 0%, #0c1e43 100%), -o-linear-gradient(left, #077f9b 0%, #0c1e43 100%);
-     background-image: linear-gradient(to right, #077f9b 0%, #0c1e43 100%), linear-gradient(to right, #077f9b 0%, #0c1e43 100%);
+     background-image: -webkit-linear-gradient(left, #4a91e9 0%, #183a64 100%), -webkit-linear-gradient(left, #4a91e9 0%, #183a64 100%);
+     background-image: -moz-linear-gradient(left, #4a91e9 0%, #183a64 100%), -moz-linear-gradient(left, #4a91e9 0%, #183a64, 100%);
+     background-image: -o-linear-gradient(left, #4a91e9 0%, #183a64 100%), -o-linear-gradient(left, #4a91e9 0%, #183a64 100%);
+     background-image: linear-gradient(to right, #4a91e9 0%, #183a64 100%), linear-gradient(to right, #4a91e9 0%, #183a64 100%);
      max-width: 1004px;
 }
 
@@ -1987,7 +1942,7 @@ input[type="radio"] .styled:checked+label::after {
      width: 147px;
      font-size: 17px;
      padding: 12px 30px;
-     background-color: #259bff;
+     background-color: #1bc3db;
      color: #fff;
      display: inline-block;
      line-height: 20px;
@@ -2004,13 +1959,13 @@ input[type="radio"] .styled:checked+label::after {
 }
 
 .traveling {
-     background-color: #fff;
-     padding: 0px 0px 90px 0;
+     background-color: #f3f3f3;
+     padding: 52px 0px 52px 0;
 }
 
 .titlepage {
      text-align: center;
-     padding: 72px 20px 27px;
+    //  padding: 72px 20px 27px;
 }
 
 .titlepage h2 {
@@ -2041,19 +1996,20 @@ input[type="radio"] .styled:checked+label::after {
      margin-left: 15px;
 }
 
-.titlepage h2::before,
-.titlepage h2::after {
-     content: "";
-     position: absolute;
-     height: 5px;
-     border-top: 1px solid #13aba6;
-     top: 27px;
-     width: 149px;
-}
+// .titlepage h2::before,
+// .titlepage h2::after {
+//      content: "";
+//      position: absolute;
+//      height: 5px;
+//      border-top: 1px solid #13aba6;
+//      top: 27px;
+//      width: 149px;
+// }
 
 .traveling-box {
-     padding: 0px 5px 0px 5px;
+    //  padding: 0px 5px 0px 5px;
      text-align: center;
+
 }
 
 .traveling-box h3 {
@@ -2063,11 +2019,11 @@ input[type="radio"] .styled:checked+label::after {
      color: #100808;
 }
 
-.traveling-box p {
-     color: #100808;
-     font-size: 17px;
-     line-height: 26px;
-}
+// .traveling-box p {
+//      color: #100808;
+//      font-size: 17px;
+//      line-height: 26px;
+// }
 
 .traveling-box .read-more {
      justify-content: center;
@@ -2077,7 +2033,7 @@ input[type="radio"] .styled:checked+label::after {
 .traveling-box .read-more a {
      font-size: 17px;
      padding: 15px 30px;
-     background-color: #259bff;
+     background-color: #1bc3db;
      color: #fff;
      display: inline-block;
      line-height: 20px;
@@ -2127,15 +2083,15 @@ input[type="radio"] .styled:checked+label::after {
      margin-left: 15px;
 }
 
-.titlepage h2::before,
-.titlepage h2::after {
-     content: "";
-     position: absolute;
-     height: 5px;
-     border-top: 1px solid #13aba6;
-     top: 27px;
-     width: 149px;
-}
+// .titlepage h2::before,
+// .titlepage h2::after {
+//      content: "";
+//      position: absolute;
+//      height: 5px;
+//      border-top: 1px solid #13aba6;
+//      top: 27px;
+//      width: 149px;
+// }
 
 .London-img {
     //  margin: 0 -15px;
@@ -2152,7 +2108,7 @@ input[type="radio"] .styled:checked+label::after {
 
 .Tours .titlepage {
      text-align: center;
-     padding-bottom: 54px;
+     // padding-bottom: 36px;
 }
 
 .titlepage h2 {
@@ -2183,26 +2139,28 @@ input[type="radio"] .styled:checked+label::after {
      margin-left: 15px;
 }
 
-.titlepage h2::before,
-.titlepage h2::after {
-     content: "";
-     position: absolute;
-     height: 5px;
-     border-top: 1px solid #13aba6;
-     top: 27px;
-     width: 149px;
-}
+// .titlepage h2::before,
+// .titlepage h2::after {
+//      content: "";
+//      position: absolute;
+//      height: 5px;
+//      border-top: 1px solid #13aba6;
+//      top: 27px;
+//      width: 149px;
+// }
 
 .item h3 {
      font-size: 20px;
      line-height: 29px;
      padding: 10px 10px 10px 10px;
      color: #282727;
+     font-weight: 600;
 }
 
 .item p {
      padding: 0px 10px 10px 10px;
-     color: #282727;
+     color: black;
+     font-family: 'Hind', sans-serif;
 }
 
 .owl-nav {
@@ -2219,11 +2177,33 @@ input[type="radio"] .styled:checked+label::after {
 }
 
 .amazing {
-     background: url(../../../../../assets/images/Amazing.jpg);
-     padding: 90px 0px;
-     background-size: 100% 100%;
+     background: url(../../../../../assets/images/Amazing-3.jpg);
+
+     background-size: 121% 100%;
      background-repeat: no-repeat;
      background-position: center center;
+
+}
+.amazing-sub-container{
+  background: rgb(0 0 0 / 75%);
+  padding: 153px 0px;
+}
+.amazing-text{
+  margin: 0 21%;
+}
+.experience-btn{
+  margin-top: 28px;
+  color: white;
+  background: transparent;
+  border: 1px solid white;
+  padding: 9px 51px;
+  border-radius: 23px;
+  font-size: 17px;
+  font-weight: 600;
+}
+.experience-btn:hover{
+  color: #2b64ab;
+  background: white;
 }
 
 .amazing .amazing-box {
@@ -2231,7 +2211,7 @@ input[type="radio"] .styled:checked+label::after {
 }
 
 .amazing .amazing-box h2 {
-     padding: 0px 0px 20px 0px;
+     padding: 0px;
      font-size: 45px;
      font-weight: bold;
      color: #fff;
@@ -2250,7 +2230,7 @@ input[type="radio"] .styled:checked+label::after {
 .amazing .amazing-box a {
      font-size: 17px;
      padding: 13px 40px;
-     background-color: #259bff;
+     background-color: #1bc3db;
      color: #fff;
      display: inline-block;
      line-height: 20px;
@@ -2290,6 +2270,7 @@ input[type="radio"] .styled:checked+label::after {
      display: inline-block;
      margin-bottom: 0px;
      display: block;
+     font-weight: 600;
 }
 
 .titlepage h2::before {
@@ -2302,15 +2283,15 @@ input[type="radio"] .styled:checked+label::after {
      margin-left: 15px;
 }
 
-.titlepage h2::before,
-.titlepage h2::after {
-     content: "";
-     position: absolute;
-     height: 5px;
-     border-top: 1px solid #13aba6;
-     top: 27px;
-     width: 149px;
-}
+// .titlepage h2::before,
+// .titlepage h2::after {
+//      content: "";
+//      position: absolute;
+//      height: 5px;
+//      border-top: 1px solid #13aba6;
+//      top: 27px;
+//      width: 149px;
+// }
 
 .blue h3 {
      background: #fff;
@@ -2352,7 +2333,7 @@ input[type="radio"] .styled:checked+label::after {
 }
 
 .blog .blog-box .travel span {
-     color: #13aba6;
+     color: #2b64ab;
      display: inline-block;
 }
 
@@ -2380,12 +2361,12 @@ label {
 }
 
 .footer {
-     background-color: #022739;
-     margin-top: 90px;
+     background-color: #2b64ab;
+     margin-top: 0px;
 }
 
 .footer .Follow {
-     margin-bottom: 27px;
+     margin-bottom: 7px;
 }
 
 .footer .Follow h3 {
@@ -2412,7 +2393,8 @@ ul.link li a {
 }
 
 ul.link li a:hover {
-     color: #878686;
+     color: black;
+     font-weight: 600;
 }
 
 .footer .Newsletter {
@@ -2428,15 +2410,18 @@ ul.link li a:hover {
 
 .footer .Subscribe {
      padding: 10px 30px;
-     border: #0e0c0c solid 1px;
+    //  border: #0e0c0c solid 1px;
      background: #0e0c0c;
      color: #fff;
      float: right;
+     border-radius: 6px;
+     transition: all .2s ease-in-out;
 }
 
 .footer .Subscribe:hover {
-     color: #fff;
-     background-color: #15cfe5;
+     color: rgb(0, 0, 0);
+     background-color: #ffffff;
+     font-weight: 600;
 }
 
 .pdn-top-30 {
@@ -2453,7 +2438,7 @@ ul.location_icon {
 
 ul.location_icon li {
      float: left;
-     height: 70px;
+     height: 27px;
      color: #fff;
      display: flex;
      flex-wrap: wrap;
@@ -2873,6 +2858,18 @@ ul.location_icon span {
 }
 
 @media (min-width: 576px) and (max-width: 767px) {
+
+  .nav-container{
+    margin: 0 0;
+  }
+
+  .amazing-sub-container{
+    background: rgb(0 0 0 / 52%);
+    padding: 83px 0px;
+  }
+  .amazing-text{
+    margin: 0 4%;
+  }
   .header_information {
       display: none;
   }
@@ -2973,7 +2970,7 @@ ul.location_icon span {
   }
 
   .footer {
-      margin-top: 70px;
+      margin-top: 0px;
   }
 
   ul.location_icon {
@@ -2986,6 +2983,91 @@ ul.location_icon span {
 }
 
 @media (max-width: 575px) {
+  .nav-container{
+    margin: 0 0;
+  }
+
+     .Tours{
+          padding-top: 46px;
+     }
+     .amazing {
+          background: url(../../../../../assets/images/Amazing-4.jpg);
+
+          background-size: 121% 100%;
+          background-repeat: no-repeat;
+          background-position: center center;
+
+     }
+  .nav-container{
+    margin: 0;
+  }
+
+     .demos .item img{
+          // border-radius: 7px 7px 0 0;
+          height: 161px;
+        }
+  .amazing-box{
+    font-size: 17px;
+  }
+
+  .amazing-sub-container{
+    background: rgb(0 0 0 / 52%);
+    padding: 83px 0px;
+  }
+  .amazing-text{
+    margin: 0 3%;
+  }
+
+  .about {
+    /* padding-top: 0px !important; */
+    /* padding: 90px 0px; */
+    margin: 0;
+    padding-top: 43px !important;
+}
+  .item{
+    width: 94%;
+  }
+
+  .demos{
+    padding: 13% 0;
+  }
+
+  .titlepage {
+    text-align: center;
+    padding: 0;
+}
+  .carousel-control-next-icon{
+    display: none;
+    width: 33px;
+    height: 24px;
+    margin-left: 4px;
+    margin: top;
+    margin-top: 5px;
+  }
+  .carousel-control-prev-icon{
+    display: none;
+    width: 36px;
+    height: 23px;
+    margin-left: 0px;
+    margin: top;
+    margin-top: 5px;
+
+  }
+
+  .banner-text {
+
+    margin: 0% 3%;
+
+  }
+  .owl-carousel {
+    display: block;
+    // gap: 15px;
+}
+
+  .Tours {
+    background-color: #fff;
+    margin: 0px 0;
+}
   .header_information {
       display: none;
   }
@@ -3005,6 +3087,7 @@ ul.location_icon span {
 
   .banner-main img {
       width: 100%;
+      object-fit: cover;
   }
 
   .banner-main .text-bg h1 {
@@ -3067,7 +3150,7 @@ ul.location_icon span {
   }
 
   .traveling {
-      padding: 0px 0px 70px 0;
+      padding: 55px 0;
   }
 
   .traveling-box {
@@ -3104,6 +3187,6 @@ ul.location_icon span {
   }
 
   .footer {
-      margin-top: 70px;
+      margin-top: 0px;
   }
 }
