--- a/src/app/Features/shared/header/header.component.html
+++ b/src/app/Features/shared/header/header.component.html
@@ -22,7 +22,7 @@
 
   </div>
   <div class="position-relative">
-    <div class="header">
+    <div class="header position-absolute">
 
       <nav class="navbar navbar-expand-sm navbar-light py-2">
         <div class="container-fluid nav-container">
