--- a/src/app/Features/about-us/about-us/about-us.component.html
+++ b/src/app/Features/about-us/about-us/about-us.component.html
@@ -1,11 +1,11 @@
 <section>
   <div class="about-banner ">
-
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+    <img src="../../../../assets/images/about-banner.jpg" alt="">
+    <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
       <path fill="#ffffff" fill-opacity="1"
         d="M0,224L48,202.7C96,181,192,139,288,117.3C384,96,480,96,576,128C672,160,768,224,864,229.3C960,235,1056,181,1152,170.7C1248,160,1344,192,1392,208L1440,224L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
       </path>
-    </svg>
+    </svg> -->
 
   </div>
 </section>
@@ -50,5 +50,54 @@
       </p>
     </div>
 
+  </div>
+</section>
+
+<section class="parallax">
+  <h2 class="text-white">Are you ready to book Appointments on this Site?</h2>
+  <button>Book Appointment</button>
+</section>
+
+<section>
+  <div class="container py-5">
+    <h1 class="text-center mb-3">Why Choose Us?</h1>
+    <div class="section-wrapper">
+      <div class="d-flex flex-column align-items-center card">
+        <span>
+          <i class="fa fa-user-md" aria-hidden="true"></i>
+        </span>
+        <h3>Certified Doctors</h3>
+      </div>
+      <div class="d-flex flex-column align-items-center card">
+        <span>
+          <i class="fas fa-heartbeat " aria-hidden="true"></i>
+        </span>
+        <h3>High Quality Equipment</h3>
+      </div>
+      <div class="d-flex flex-column align-items-center card">
+        <span>
+          <i class="fas fa-medkit" aria-hidden="true"></i>
+        </span>
+        <h3>Profissional Services</h3>
+      </div>
+      <div class="d-flex flex-column align-items-center card">
+        <span>
+          <i class="fas fa-flask" aria-hidden="true"></i>
+        </span>
+        <h3>Modren Technology</h3>
+      </div>
+      <div class="d-flex flex-column align-items-center card">
+        <span>
+          <i class="fa fa-handshake-o" aria-hidden="true"></i>
+        </span>
+        <h3>Advanced Treatment</h3>
+      </div>
+      <div class="d-flex flex-column align-items-center card">
+        <span>
+          <i class="fa fa-phone" aria-hidden="true"></i>
+        </span>
+        <h3>24/7 Support</h3>
+      </div>
+    </div>
   </div>
 </section>
